@@ -19,11 +19,16 @@
 #cmakedefine BSR_ANYCRLF
 #cmakedefine NO_RECURSE
 
+#cmakedefine SUPPORT_LIBBZ2
+#cmakedefine SUPPORT_LIBZ
+#cmakedefine SUPPORT_LIBREADLINE
+
 #define NEWLINE			@NEWLINE@
 #define POSIX_MALLOC_THRESHOLD	@PCRE_POSIX_MALLOC_THRESHOLD@
 #define LINK_SIZE		@PCRE_LINK_SIZE@
 #define MATCH_LIMIT		@PCRE_MATCH_LIMIT@
 #define MATCH_LIMIT_RECURSION	@PCRE_MATCH_LIMIT_RECURSION@
+
 
 #define MAX_NAME_SIZE	32
 #define MAX_NAME_COUNT	10000
